cmake_minimum_required(VERSION 3.13)
project(data_struct C)

set(CMAKE_C_STANDARD 11)

add_executable(data_struct main.c)
add_executable(LinkList data_struct_source/LinkList.c)
add_executable(stack data_struct_source/stack.c)
add_executable(queue data_struct_source/Queue.c)
add_executable(Triple data_struct_source/Triple.c)
add_executable(Binary data_struct_source/BinaryTree.c)
add_executable(ThreadedBinaryTree data_struct_source/ThreadedBinaryTree.c)
add_executable(MGraph data_struct_source/MGraph.c)
add_executable(ListGraph data_struct_source/ListGraph.c)
add_executable(Huffman data_struct_source/Huffman.c)
