cmake_minimum_required(VERSION 3.13)
project(data_struct C)

set(CMAKE_C_STANDARD 11)

add_executable(data_struct main.c)
add_executable(LinkList data_struct_source/Linear_list/LinkList.c)
add_executable(stack data_struct_source/Linear_list/stack.c)
add_executable(queue data_struct_source/Linear_list/Queue.c)
add_executable(Triple data_struct_source/Generalized_list/Triple.c)
add_executable(Binary data_struct_source/Tree/BinaryTree.c)
add_executable(InsertSort data_struct_source/Sort/InsertSort.c)
add_executable(ThreadedBinaryTree data_struct_source/Tree/ThreadedBinaryTree.c)
add_executable(MGraph data_struct_source/Graph/MGraph.c)
add_executable(ListGraph data_struct_source/Graph/ListGraph.c)
add_executable(Huffman data_struct_source/Tree/Huffman.c)
add_executable(BinarySearch data_struct_source/Search/BinarySearch.c)
add_executable(BinarySortTree data_struct_source/Search/BinarySortTree.c)
add_executable(BlancedBinaryTree data_struct_source/Search/BlancedBinaryTree.c)
add_executable(Shellsort data_struct_source/Sort/Shellsort.c)
add_executable(QuickSort data_struct_source/Sort/QuickSort.c)
add_executable(SelectionSort data_struct_source/Sort/SelectionSort.c)
add_executable(MergingSort data_struct_source/Sort/MergingSort.c)
add_executable(HeapSort data_struct_source/Sort/HeapSort.c)
